@@ -1,3 +1,8 @@
+2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Makefile.am:
+	* MonoDevelop.XmlEditor.mdp: Add glib dep.
+
 2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Add
